--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 .highlite_titlebar {
     height: 25px;
-    background: rgb(41, 41, 41);
+    background: #141414;
     width: 100%;
     font-size: 14px;
     color: white;
     display: flex;
     align-items: center;
-    font-family: sans-serif;
-    font-weight: bold;
-
+    font-family: 'Inter';
+    align-items: center;
+    border-bottom: 1px solid #353535;
     /* Electron allow user to drag the window */
     -webkit-app-region: drag;
 }
@@ -22,10 +23,131 @@ body {
 }
 
 .highlite_titlebar #logoImg {
-    height: 18px;
+    height: 25px;
+}
+
+.highlite_titlebar a {
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
 }
 
 .highlite_titlebar a {
     /* Allow clicking on the links */
     -webkit-app-region: no-drag;
+}
+
+.highlite_bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: -webkit-fill-available;
+    background: #141414;
+    color: white;
+    width: auto;
+    min-width: 30px;
+    z-index: 999;
+    flex-wrap: wrap;
+    border-left: 1px solid #353535;
+}
+
+.highlite_bar_selected_content {
+    flex-direction: column;
+    background: #212121;
+    color: white;
+    z-index: 999;
+    position: relative;
+    display: none;
+    width: 250px;
+    border-right: 1px solid black;
+    border-left: 1px solid #353535;
+}
+
+.highlite_bar_selected_content.activated {
+    display: flex;
+}
+
+.highlite_bar .highlite_bar_item {
+    margin-top:5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 25px;
+    width: 25px;
+}
+
+/* Disallow dragging or selecting the text */
+.highlite_bar .highlite_bar_item {
+    -webkit-app-region: no-drag;
+    user-select: none;
+}
+
+.highlite_bar .highlite_bar_item:hover {
+    background: #333;
+}
+
+.highlite_bar_selected_content .content_title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #141414;
+    font-family: 'Inter';
+    height: 24px;
+    padding: 10px;
+    border-bottom: 1px solid #353535;
+}
+
+.highlite_bar_selected_content .content {
+    display: flex;
+    padding: 5px;
+    font-family: 'Inter';
+    font-size: 14px;
+    border-top: 1px solid black;
+}
+
+.video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10;
+    object-fit: cover;
+    filter: blur(3px);
+}
+
+
+/* Modifications to the Game CSS */
+#main {
+    align-items: unset !important;
+    justify-content: unset !important;
+    flex-direction: row !important;
+    border-top: 1px solid black !important;
+}
+body {
+    align-items: unset !important;
+    display: unset !important;
+    flex-direction: unset !important;
+    justify-content: unset !important;
+    background: black;
+}
+
+#body-container {
+    display: flex !important;
+    flex-direction: column !important;
+}
+
+#game-container {
+    width: -webkit-fill-available !important;
+    min-width: unset !important;
+    border-right: 1px solid black !important;
+}
+
+#game-container .full-size {
+    width: -webkit-fill-available !important;
+    min-width: unset !important;
+}
+
+#game-container__game-canvas {
+    width: -webkit-fill-available !important;
+    min-width: unset !important;
 }
